--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <center>
         <h1 class="btn btn-info heading">Object Detection</h1>
         <h3 class="btn btn-success" id="status"></h3>
+        <h3 id="number_of_objects" class="btn btn-warning"></h3>
     </center>
 
     <script src="main.js"></script>
